# wright

./: LICENSE  README.md  pyproject.toml
src/wright/: __init__.py  main.py
src/wright/aws/: __init__.py  ecr.py
src/wright/docker/: __init__.py  build.py  compose.py  run.py
src/wright/golang/: __init__.py  build.py  commands.py
src/wright/openapi/: __init__.py  openapi.py
src/wright/pandoc/: __init__.py  pandoc.py
src/wright/proojekt/: __init__.py  decorators.py  proojekt.py  support.py
